syntax = "proto3";

package api.advanced_coupon.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/advanced_coupon/v1;v1";

// 营销优惠券服务，负责优惠券生命周期、领取核销及最优用券方案计算。
service AdvancedCoupon {
  // 录入新的优惠券模板或批次。
  rpc CreateCoupon(CreateCouponRequest) returns (CreateCouponResponse);

  // 通过 ID 获取优惠券规则及配置详情。
  rpc GetCoupon(GetCouponRequest) returns (GetCouponResponse);

  // 列表检索系统中的优惠券活动。
  rpc ListCoupons(ListCouponsRequest) returns (ListCouponsResponse);

  // 在订单中核销指定优惠券。
  rpc UseCoupon(UseCouponRequest) returns (UseCouponResponse);

  // 核心算法：针对订单金额，自动计算最优的优惠券组合及减免额。
  rpc CalculateBestDiscount(CalculateBestDiscountRequest) returns (CalculateBestDiscountResponse);
}

// 优惠券配置信息。
message Coupon {
  // 系统 ID。
  uint64 id = 1;
  // 优惠券业务码。
  string code = 2;
  // 类型 (CASH, PERCENTAGE, SHIPPING)。
  string type = 3;
  // 面值或折扣值。
  int64 discount_value = 4;
  // 起用金额门槛。
  int64 min_purchase_amount = 5;
  // 最大抵扣金额限制。
  int64 max_discount_amount = 6;
  // 有效期起始。
  google.protobuf.Timestamp valid_from = 7;
  // 有效期截止。
  google.protobuf.Timestamp valid_until = 8;
  // 发行总量。
  int64 total_quantity = 9;
  // 已领取/已使用量。
  int64 used_quantity = 10;
  // 单用户领取上限。
  int64 per_user_limit = 11;
  // 活动状态 (DRAFT, ACTIVE, EXPIRED)。
  string status = 12;
}

// 创建请求。
message CreateCouponRequest {
  // 业务码。
  string code = 1;
  // 类型。
  string type = 2;
  // 优惠值。
  int64 discount_value = 3;
  // 生效日期。
  google.protobuf.Timestamp valid_from = 4;
  // 结束日期。
  google.protobuf.Timestamp valid_until = 5;
  // 发行量。
  int64 total_quantity = 6;
}

// 响应详情。
message CreateCouponResponse {
  // 生成的优惠券实体。
  Coupon coupon = 1;
}

// 单查请求。
message GetCouponRequest {
  // 记录 ID。
  uint64 id = 1;
}

// 单查响应。
message GetCouponResponse {
  // 优惠券详情。
  Coupon coupon = 1;
}

// 检索请求。
message ListCouponsRequest {
  // 状态筛选。
  string status = 1;
  // 数量。
  uint32 page_size = 2;
  // 页码。
  uint32 page_num = 3;
}

// 检索结果。
message ListCouponsResponse {
  // 优惠券列表。
  repeated Coupon coupons = 1;
  // 总笔数。
  uint64 total_count = 2;
}

// 核销请求。
message UseCouponRequest {
  // 使用者。
  uint64 user_id = 1;
  // 券业务码。
  string code = 2;
  // 目标订单 ID。
  uint64 order_id = 3;
}

// 核销结果。
message UseCouponResponse {
  // 操作是否成功。
  bool success = 1;
}

// 方案计算请求。
message CalculateBestDiscountRequest {
  // 订单应付总额。
  int64 order_amount = 1;
  // 用户持有的可用优惠券 ID 列表。
  repeated uint64 coupon_ids = 2;
}

// 方案计算响应。
message CalculateBestDiscountResponse {
  // 计算出的最优用券组合。
  repeated uint64 best_coupon_ids = 1;
  // 抵扣后的最终支付价格。
  int64 final_price = 2;
  // 合计节省金额。
  int64 discount_amount = 3;
}
