syntax = "proto3";

package api.risk_security.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/wyfcoding/ecommerce/api/risk_security/v1;risksecurityv1";

service RiskSecurityService {
  // Risk Evaluation
  rpc EvaluateRisk(EvaluateRiskRequest) returns (EvaluateRiskResponse);

  // Blacklist Management
  rpc AddToBlacklist(AddToBlacklistRequest) returns (google.protobuf.Empty);
  rpc RemoveFromBlacklist(RemoveFromBlacklistRequest) returns (google.protobuf.Empty);

  // Behavior Tracking
  rpc RecordUserBehavior(RecordUserBehaviorRequest) returns (google.protobuf.Empty);
}

message RiskAnalysisResult {
  uint64 user_id = 1;
  int32 risk_score = 2;
  int32 risk_level = 3;
  string risk_items_json = 4;
}

message EvaluateRiskRequest {
  uint64 user_id = 1;
  string ip = 2;
  string device_id = 3;
  int64 amount = 4;
}

message EvaluateRiskResponse {
  RiskAnalysisResult result = 1;
}

message AddToBlacklistRequest {
  string type = 1;
  string value = 2;
  string reason = 3;
  int64 duration_seconds = 4;
}

message RemoveFromBlacklistRequest {
  uint64 id = 1;
}

message RecordUserBehaviorRequest {
  uint64 user_id = 1;
  string ip = 2;
  string device_id = 3;
}
